--- a/style.css
+++ b/style.css
@@ -32,16 +32,26 @@ a {
 	top:3px;
 	right: 3px;
 	z-index:999;
+	display:none;
 }
 
+#tagline,
 #loading {
 	z-index:-1000;
 	position:absolute;
-	top:40%;
 	margin-left: auto;
 	margin-right: auto;
-	left: 0;
-	right: 0;
+	left:0;
+	right:0;
+	text-align: center;
+}
+
+#tagline{
+	top:50%;
+}
+
+#loading {
+	top:40%;
 	width: 50px;
 	height: 50px;
 	border-radius: 18px;
@@ -54,6 +64,9 @@ a {
 	animation-iteration-count: infinite;
 	animation-timing-function: linear;    
 }
+
+
+
 @keyframes spin {
 	from {transform:rotate(0deg);}
 	to {transform:rotate(90deg);}
