--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ a {
 	position:absolute;
 	top:3px;
 	left: 3px;
-	z-index:999;
+	z-index:10;
 }
 
 #menu{
@@ -31,13 +31,13 @@ a {
 	position:absolute;
 	top:3px;
 	right: 3px;
-	z-index:999;
-	display:none;
+	z-index:10;
+	Qdisplay:none;
 }
 
 #tagline,
 #loading {
-	z-index:-1000;
+	z-index:-10;
 	position:absolute;
 	margin-left: auto;
 	margin-right: auto;
@@ -56,13 +56,22 @@ a {
 	height: 50px;
 	border-radius: 18px;
 	border:10px solid #333;
-	Qborder:10px solid #FFE200;
 	Qbackground-color: #FFE200;
 	Qbackground-color: #333;
 	animation-name: spin;
 	animation-duration: 800ms;
 	animation-iteration-count: infinite;
 	animation-timing-function: linear;    
+
+	width: 7.8vmin;
+	height: 7.8vmin;
+	border-radius: 3vmin;
+	border: 1.5vmin solid #333;
+
+
+
+
+
 }
 
 
@@ -102,9 +111,68 @@ a {
 
 @media print
 {    
-    .no-print, .no-print *
+    .no-print
     {
-        display: none !important;
+        display: none;
     }
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 100;
+    top: 0;
+    right: 0;
+    background-color: #333;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+    color:#f1f1f1;
+    
+}
+
+.sidenav>div{
+	padding: 0 15px;
+}
+
+
+.sidenav a {
+    Qpadding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    color: #ff4081;
+    Qdisplay: block;
+    transition: 0.3s;
+}
+
+.sidenav a:hover {
+    color: #f1f1f1;
+    color: #818181;
+}
+
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
